# llamantin

./: .gitignore  README.md  main.py  pyproject.toml  qtclient.py  qtclientconfig.py  viewdb.py
llamantin/: agent.py  collector.py  config.py  docsearchagent.py  llm.py  server.py  websearchagent.py
tests/: test_agent.py  test_docsearchagent.py  test_llm.py  test_websearchagent.py
